--- a/dagster.yaml
+++ b/dagster.yaml
@@ -2,14 +2,15 @@ storage:
   postgres:
     postgres_db:
       username:
-        env: $DAGSTER_PG_USERNAME
+        env: DAGSTER_PG_USERNAME
       password:
-        env: $DAGSTER_PG_PASSWORD
+        env: DAGSTER_PG_PASSWORD
       hostname:
-        env: $DAGSTER_PG_HOST
+        env: DAGSTER_PG_HOST
       db_name:
-        env: $DAGSTER_PG_DB
-      port: 5432
+        env: DAGSTER_PG_DB
+      port:
+        env: DAGSTER_PG_PORT
 
 local_artifact_storage:
   module: dagster.core.storage.root
